bout to merge fullcal update

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1508,62 +1508,62 @@ select {
 
 :root {
   --main-color: #06c;
-  --purple: rgb(105, 12, 104);
-  --purple5: rgba(105, 12, 104, 0.05);
-  --purple10: rgba(105, 12, 104, 0.1);
-  --purple15: rgba(105, 12, 104, 0.15);
-  --purple20: rgba(105, 12, 104, 0.2);
-  --purple30: rgba(105, 12, 104, 0.3);
-  --purple50: rgba(105, 12, 104, 0.5);
-  --purple70o: rgba(143, 93, 147, 1);
-  --purple70: rgba(105, 12, 104, 0.7);
-  --purple80: rgba(105, 12, 104, 0.8);
-  --purple90: rgba(105, 12, 104, 0.9);
-  --yellow: rgb(240, 154, 53);
-  --yellow5: rgba(240, 154, 53, 0.05);
-  --yellow10: rgba(240, 154, 53, 0.1);
-  --yellow20: rgba(240, 154, 53, 0.2);
-  --yellow30: rgba(240, 154, 53, 0.3);
-  --yellow40: rgba(240, 154, 53, 0.4);
-  --yellow50: rgba(240, 154, 53, 0.5);
-  --yellow70: rgba(240, 154, 53, 0.7);
-  --yellow80: rgba(240, 154, 53, 0.8);
-  --yellow90: rgba(240, 154, 53, 0.9);
-  --pink: rgb(234, 78, 80);
-  --pink5: rgba(234, 78, 80, 0.05);
-  --pink10o: rgba(251, 238, 238, 0.97);
-  --pink10: rgba(234, 78, 80, 0.1);
-  --pink30: rgba(234, 78, 80, 0.3);
-  --pink50: rgba(234, 78, 80, 0.5);
-  --pink70: rgba(234, 78, 80, 0.7);
-  --pink80: rgba(234, 78, 80, 0.8);
-  --pink85: rgba(234, 78, 80, 0.85);
-  --pink90: rgba(234, 78, 80, 0.9);
-  --white10: rgba(255, 255, 255, 0.1);
-  --white30: rgba(255, 255, 255, 0.3);
-  --white50: rgba(255, 255, 255, 0.5);
-  --white70: rgba(255, 255, 255, 0.7);
-  --white80: rgba(255, 255, 255, 0.8);
-  --white93: rgba(255, 255, 255, 0.93);
-  --white97: rgba(255, 255, 255, 0.97);
-  --gray: rgba(210, 210, 210, 1);
-  --gray10: rgba(210, 210, 210, 0.1);
-  --gray30: rgba(210, 210, 210, 0.3);
-  --gray50: rgba(210, 210, 210, 0.5);
-  --gray70: rgba(210, 210, 210, 0.7);
-  --gray80: rgba(210, 210, 210, 0.8);
-  --gray93: rgba(210, 210, 210, 0.93);
-  --gray97: rgba(210, 210, 210, 0.97);
-  --darkgray: rgba(120, 120, 120, 1);
-  --darkgray30: rgba(120, 120, 120, 0.3);
-  --darkgray50: rgba(120, 120, 120, 0.5);
-  --darkgray70: rgba(120, 120, 120, 0.7);
-  --darkgray90: rgba(120, 120, 120, 0.9);
-  --darkgray97: rgba(120, 120, 120, 0.97);
-  --black10: rgba(0, 0, 0, 0.1);
-  --black30: rgba(0, 0, 0, 0.3);
-  --black50: rgba(0, 0, 0, 0.5);
-  --black70: rgba(0, 0, 0, 0.7);
+  --purple: rgb(105,12,104);
+  --purple5: rgba(105,12,104,0.05);
+  --purple10: rgba(105,12,104,0.1);
+  --purple15: rgba(105,12,104,0.15);
+  --purple20: rgba(105,12,104,0.2);
+  --purple30: rgba(105,12,104,0.3);
+  --purple50: rgba(105,12,104,0.5);
+  --purple70o: rgba(143,93,147,1);
+  --purple70: rgba(105,12,104,0.7);
+  --purple80: rgba(105,12,104,0.8);
+  --purple90: rgba(105,12,104,0.90);
+  --yellow: rgb(240,154,53);
+  --yellow5: rgba(240,154,53,0.05);
+  --yellow10: rgba(240,154,53,0.1);
+  --yellow20: rgba(240,154,53,0.2);
+  --yellow30: rgba(240,154,53,0.3);
+  --yellow40: rgba(240,154,53,0.4);
+  --yellow50: rgba(240,154,53,0.5);
+  --yellow70: rgba(240,154,53,0.7);
+  --yellow80: rgba(240,154,53,0.8);
+  --yellow90: rgba(240,154,53,0.9);
+  --pink: rgb(234,78,80);
+  --pink5: rgba(234,78,80,0.05);
+  --pink10o: rgba(251,238,238,0.97);
+  --pink10: rgba(234,78,80,0.1);
+  --pink30: rgba(234,78,80,0.3);
+  --pink50: rgba(234,78,80,0.5);
+  --pink70: rgba(234,78,80,0.7);
+  --pink80: rgba(234,78,80,0.80);
+  --pink85: rgba(234,78,80,0.85);
+  --pink90: rgba(234,78,80,0.90);
+  --white10: rgba(255,255,255,0.1);
+  --white30: rgba(255,255,255,0.3);
+  --white50: rgba(255,255,255,0.5);
+  --white70: rgba(255,255,255,0.7);
+  --white80: rgba(255,255,255,0.8);
+  --white93: rgba(255,255,255,0.93);
+  --white97: rgba(255,255,255,0.97);
+  --gray: rgba(210,210,210,1);
+  --gray10: rgba(210,210,210,0.1);
+  --gray30: rgba(210,210,210,0.3);
+  --gray50: rgba(210,210,210,0.5);
+  --gray70: rgba(210,210,210,0.7);
+  --gray80: rgba(210,210,210,0.8);
+  --gray93: rgba(210,210,210,0.93);
+  --gray97: rgba(210,210,210,0.97);
+  --darkgray: rgba(120,120,120,1);
+  --darkgray30: rgba(120,120,120,0.30);
+  --darkgray50: rgba(120,120,120,0.50);
+  --darkgray70: rgba(120,120,120,0.70);
+  --darkgray90: rgba(120,120,120,0.90);
+  --darkgray97: rgba(120,120,120,0.97);
+  --black10: rgba(0,0,0,0.1);
+  --black30: rgba(0,0,0,0.3);
+  --black50: rgba(0,0,0,0.5);
+  --black70: rgba(0,0,0,0.7);
   --green: rgb(46, 107, 53);
   --green10o: rgba(235, 240, 235, 0.97);
   --green10: rgba(46, 107, 53, 0.1);
@@ -1702,16 +1702,14 @@ footer .contact {
   display: inline-block;
   position: relative;
   top: 2.5em;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 footer .hours {
   text-align: left;
   display: inline-block;
   top: 2.5em;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 footer .hours span {
@@ -1722,8 +1720,7 @@ footer .hours span {
 
 footer .icons {
   top: 2.5em;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   display: inline-block;
   margin: 2em 0;
 }
@@ -1738,8 +1735,7 @@ footer .icons div {
 
 footer .booknow {
   top: 2.5em;
-  -webkit-transform: translateY(-75%);
-          transform: translateY(-75%);
+  transform: translateY(-75%);
 }
 
 footer .copyright {
@@ -2101,8 +2097,7 @@ em {
   display: inline-block;
   position: relative;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 p {
@@ -2135,8 +2130,7 @@ a:hover {
   position: absolute;
   right: 3em;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   /*margin-left:13em;*/
   white-space: nowrap;
 }
@@ -2181,8 +2175,7 @@ a:hover {
   top: 50%;
   left: 50%;
   border-radius: 5px;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   z-index: -1;
 }
 
@@ -2195,8 +2188,7 @@ a:hover {
   top: 50%;
   left: 50%;
   border-radius: 5px;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   background-color: var(--purple10);
   z-index: -1;
 }
@@ -2239,8 +2231,7 @@ a:hover {
   font-weight: bold;
   color: var(--pink);
   font-size: 1em;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 #booknow .underline {
@@ -2282,8 +2273,7 @@ a:hover {
 }
 
 .logo.popUp {
-  -webkit-transform: translateY(-40%);
-          transform: translateY(-40%);
+  transform: translateY(-40%);
   margin-bottom: -2em;
 }
 
@@ -2494,8 +2484,7 @@ a:hover {
 .btnPopDown > .button {
   position: absolute;
   bottom: 0;
-  -webkit-transform: translate(-50%, 50%);
-          transform: translate(-50%, 50%);
+  transform: translate(-50%, 50%);
 }
 
 .yellowBgFlash {
@@ -2617,8 +2606,7 @@ a:hover {
 #acu-chin-1 .button {
   position: absolute;
   bottom: 0;
-  -webkit-transform: translate(-50%, 50%);
-          transform: translate(-50%, 50%);
+  transform: translate(-50%, 50%);
 }
 
 #bp-1 {
@@ -2904,8 +2892,7 @@ a:hover {
   position: absolute;
   top: 5em;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 
 .textBox {
@@ -3112,8 +3099,7 @@ a:hover {
   font-weight: 700 !important;
   position: absolute;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   padding: 4px;
   margin: 0 !important;
   border-radius: 3px;
@@ -3130,8 +3116,7 @@ a:hover {
   font-weight: 700 !important;
   position: absolute;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   padding: 4px;
   margin: 0 !important;
   border-radius: 3px;
@@ -3163,8 +3148,7 @@ a:hover {
   position: absolute;
   top: 50%;
   padding: 4px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .xMark {
@@ -3286,8 +3270,7 @@ a:hover {
   position: absolute;
   bottom: 0;
   right: 0;
-  -webkit-transform: translate(50%, 50%);
-          transform: translate(50%, 50%);
+  transform: translate(50%, 50%);
   background-color: var(--pink90);
   padding: 0.1em 0.5em;
   color: white;
@@ -3313,8 +3296,7 @@ a:hover {
   font-size: 0.8em;
   font-weight: bold;
   top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   left: 15px;
   width: 10px;
   height: 10px;
@@ -3337,8 +3319,7 @@ a:hover {
   height: 10px;
   padding: 0;
   border-radius: 10px;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   background-color: transparent;
 }
 
@@ -3383,11 +3364,8 @@ a:hover {
   height: 1.5em;
   background-size: contain;
   background-repeat: no-repeat;
-  transition: -webkit-transform 500ms;
   transition: transform 500ms;
-  transition: transform 500ms, -webkit-transform 500ms;
-  -webkit-transform-origin: top left;
-          transform-origin: top left;
+  transform-origin: top left;
   background-image: url(/images/icons/arrow-right.png);
 }
 
@@ -3398,15 +3376,13 @@ a:hover {
 
 .toggle_ele span.right,
 .hideFUs span.right {
-  -webkit-transform: rotate(0deg);
-          transform: rotate(0deg);
+  transform: rotate(0deg);
 }
 
 .toggle_ele span.down,
 #scrollToBtm,
 .hideFUs span.down {
-  -webkit-transform: rotate(-30deg) translate(-0.6em, 0px);
-          transform: rotate(-30deg) translate(-0.6em, 0px);
+  transform: rotate(-30deg) translate(-0.6em, 0px);
 }
 
 #scrollToBtm {
@@ -3447,8 +3423,7 @@ a:hover {
   background-color: rgb(0, 0, 0, 0.2);
   position: relative;
   top: 1.5em;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .divide .title {
@@ -3458,20 +3433,16 @@ a:hover {
 .dropDown.shiftLeft,
 .mobile > .tab > .dropDown {
   right: 0px !important;
-  -webkit-transform: scale(1) !important;
-          transform: scale(1) !important;
+  transform: scale(1) !important;
   left: unset !important;
-  -webkit-transform-origin: top right;
-          transform-origin: top right;
+  transform-origin: top right;
 }
 
 .dropDown.shiftRight {
   left: 0px !important;
-  -webkit-transform: scale(1) !important;
-          transform: scale(1) !important;
+  transform: scale(1) !important;
   right: unset !important;
-  -webkit-transform-origin: top left;
-          transform-origin: top left;
+  transform-origin: top left;
 }
 
 .topMenu {
@@ -3560,8 +3531,7 @@ a:hover {
   border-radius: 4px;
   border: 2px solid transparent;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   transition: background-color 400ms, border-color 400ms, color 400ms, font-size 400ms;
 }
 
@@ -3582,8 +3552,7 @@ a:hover {
 
 .menuBar .dropDown .title {
   top: auto;
-  -webkit-transform: unset;
-          transform: unset;
+  transform: unset;
   padding: 4px;
   margin-left: -6px;
   width: 100%;
@@ -3602,8 +3571,7 @@ a:hover {
   height: 1px;
   border-bottom: 1px solid black;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   bottom: -1px;
 }
 
@@ -3617,28 +3585,23 @@ a:hover {
   position: absolute;
   left: 50%;
   top: 100%;
-  -webkit-transform: translateX(-50%) scaleX(0);
-          transform: translateX(-50%) scaleX(0);
+  transform: translateX(-50%) scaleX(0);
   padding: 0 10px;
   text-align: center;
   white-space: nowrap;
   border-radius: 0 0 5px 5px;
-  transition: -webkit-transform 400ms;
   transition: transform 400ms;
-  transition: transform 400ms, -webkit-transform 400ms;
   box-sizing: border-box;
   border: 4px solid var(--gray80);
   border-top-style: dotted;
 }
 
 .menuBar > .tab > .dropDown.active {
-  -webkit-transform: translateX(-50%) scaleX(1);
-          transform: translateX(-50%) scaleX(1);
+  transform: translateX(-50%) scaleX(1);
 }
 
 .menuBar .dropDown .dropDown.active {
-  -webkit-transform: translateX(-100%) scaleX(1);
-          transform: translateX(-100%) scaleX(1);
+  transform: translateX(-100%) scaleX(1);
   border-top-color: var(--yellow70);
   border-right-color: var(--gray80);
   border-right-style: dotted;
@@ -3807,8 +3770,7 @@ body > .blur {
   width: 1.75em;
   height: 1.75em;
   top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .lds-ring.insideBtn div {
@@ -3884,25 +3846,21 @@ body > .blur {
 
 @-webkit-keyframes lds-ring {
   0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
 @keyframes lds-ring {
   0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
@@ -4560,8 +4518,7 @@ button.ui-datepicker-cmd {
   display: block !important;
   position: absolute !important;
   z-index: -1 !important;
-  -webkit-filter: mask() !important;
-          filter: mask() !important;
+  filter: mask() !important;
   top: -1px !important;
   left: -1px !important;
   width: 187px !important;
